--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
             <div class="resume-section-content">
                 <h1 class="mb-0">
                     賴又睿
-                    <span class="text-primary">Taylor</span>
                 </h1>
                 <div class="subheading mb-5">
-                    3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+                    3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 123-456 ·
                     <a href="mailto:larry487@gmail.com">larry487@gmail.com</a>
                 </div>
-                <p class="lead mb-5">我擅長利用敏捷框架提供高層概述的強大大綱。採用迭代方法的企業戰略，促進協作思維，進一步推動整體價值主張。</p>
+                <p class="lead mb-5">我擅長利用敏捷思考能力，臨時抱佛腳。</p>
                 <div class="social-icons">
                     <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -63,20 +62,95 @@
                 <h2 class="mb-5">經驗</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">資深網頁開發者</h3>
+                        <h3 class="mb-0">初階網頁開發者</h3>
                         <div class="subheading mb-3">Intelitec Solutions</div>
-                        <p>帶來雙贏生存策略，確保積極主導。在一天結束時，前進，新的正常，從X世代演變而來，正在通往流線型雲解決方案的跑道上。實時生成的用戶內容將具有多個觸點，用於離岸操作。</p>
+                        <p>帶來雙贏生存策略，確保積極主導。</p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">2013年3月 - 至今</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">2024年3月 - 至今</span></div>
                 </div>
                 <!-- 其他經驗部分同理 -->
             </div>
         </section>
-        <!-- 其他部分同理 -->
+         <!-- 教育 -->
+        <section class="resume-section" id="education">
+            <div class="resume-section-content">
+                <h2 class="mb-5">教育</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">土城國小</h3>
+                        <div class="subheading mb-3">小學士</div>
+                        <div>計算機科學 - 網頁開發專業</div>
+                        <p>GPA: 3.23</p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">2006年8月 - 2010年5月</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div                    class="flex-grow-1">
+                        <h3 class="mb-0">北大高中</h3>
+                        <div class="subheading mb-3">技術磁性計畫</div>
+                        <p>GPA: 3.56</p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">2002年8月 - 2006年5月</span></div>
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- 技能-->
+        <section class="resume-section" id="skills">
+            <div class="resume-section-content">
+                <h2 class="mb-5">技能</h2>
+                <div class="subheading mb-3">程式語言與工具</div>
+                <ul class="list-inline dev-icons">
+                    <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-react"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-sass"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-less"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                </ul>
+                <div class="subheading mb-3">工作流程</div>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        目前沒有..
+                    </li>
+                                    </ul>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- 興趣-->
+        <section class="resume-section" id="interests">
+            <div class="resume-section-content">
+                <h2 class="mb-5">興趣</h2>
+                <p>除了做網頁開發之外，都在跳break跟發呆。</p>
+                <p class="mb-0">當被迫待在室內時，我喜歡看電影跟動漫。</p>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- 獎項-->
+        <section class="resume-section" id="awards">
+            <div class="resume-section-content">
+                <h2 class="mb-5">獎項與證書</h2>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        無
+                    </li>
+                </ul>
+            </div>
+        </section>
     </div>
-    <!-- Bootstrap核心JS-->
+    <!-- Bootstrap 核心 JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- 核心主題JS-->
+    <!-- 核心主題 JS-->
     <script src="js/scripts.js"></script>
 </body>
 </html>
+
+
+
