--- a/index.html
+++ b/index.html
@@ -41,10 +41,18 @@
             <div class="resume-section-content">
                 <h1 class="mb-0">
                     賴又睿
+                    <span class="text-primary">Taylor</span>
                 </h1>
                 <div class="subheading mb-5">
                     3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
                     <a href="mailto:larry487@gmail.com">larry487@gmail.com</a>
+                </div>
+                <p class="lead mb-5">我擅長臨時抱佛腳</p>
+                <div class="social-icons">
+                    <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                    <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </section>
@@ -55,7 +63,7 @@
                 <h2 class="mb-5">經驗</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">初階網頁開發者</h3>
+                        <h3 class="mb-0">資深網頁開發者</h3>
                         <div class="subheading mb-3">Intelitec Solutions</div>
                         <p>帶來雙贏生存策略，確保積極主導。</p>
                     </div>
